# src/main/java/com/ibrahimkuley/rest/model/Person.java
@@ -1,0 +1,128 @@
+package com.ibrahimkuley.rest.model;
+
+import com.fasterxml.jackson.annotation.JsonProperty;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import java.math.BigDecimal;
+import java.util.Date;
+
+import java.util.Objects;
+
+
+@ApiModel(description = "")
+@javax.annotation.Generated(value = "class io.swagger.codegen.languages.SpringBootServerCodegen", date = "2016-06-30T08:21:20.533Z")
+public class Person  {
+  
+  private BigDecimal id = null;
+  private String name = null;
+  private Date createdAt = null;
+  private Date updatedAt = null;
+  private String email = null;
+  private BigDecimal age = null;
+
+  /**
+   **/
+  @ApiModelProperty(required = true, value = "")
+  @JsonProperty("id")
+  public BigDecimal getId() {
+    return id;
+  }
+  public void setId(BigDecimal id) {
+    this.id = id;
+  }
+
+  /**
+   **/
+  @ApiModelProperty(required = true, value = "")
+  @JsonProperty("name")
+  public String getName() {
+    return name;
+  }
+  public void setName(String name) {
+    this.name = name;
+  }
+
+  /**
+   **/
+  @ApiModelProperty(required = true, value = "")
+  @JsonProperty("created_at")
+  public Date getCreatedAt() {
+    return createdAt;
+  }
+  public void setCreatedAt(Date createdAt) {
+    this.createdAt = createdAt;
+  }
+
+  /**
+   **/
+  @ApiModelProperty(value = "")
+  @JsonProperty("updated_at")
+  public Date getUpdatedAt() {
+    return updatedAt;
+  }
+  public void setUpdatedAt(Date updatedAt) {
+    this.updatedAt = updatedAt;
+  }
+
+  /**
+   **/
+  @ApiModelProperty(value = "")
+  @JsonProperty("email")
+  public String getEmail() {
+    return email;
+  }
+  public void setEmail(String email) {
+    this.email = email;
+  }
+
+  /**
+   * minimum: 0.0
+   * maximum: 100.0
+   **/
+  @ApiModelProperty(value = "")
+  @JsonProperty("age")
+  public BigDecimal getAge() {
+    return age;
+  }
+  public void setAge(BigDecimal age) {
+    this.age = age;
+  }
+
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    Person person = (Person) o;
+    return Objects.equals(id, person.id) &&
+        Objects.equals(name, person.name) &&
+        Objects.equals(createdAt, person.createdAt) &&
+        Objects.equals(updatedAt, person.updatedAt) &&
+        Objects.equals(email, person.email) &&
+        Objects.equals(age, person.age);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(id, name, createdAt, updatedAt, email, age);
+  }
+
+  @Override
+  public String toString()  {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class Person {\n");
+    
+    sb.append("  id: ").append(id).append("\n");
+    sb.append("  name: ").append(name).append("\n");
+    sb.append("  createdAt: ").append(createdAt).append("\n");
+    sb.append("  updatedAt: ").append(updatedAt).append("\n");
+    sb.append("  email: ").append(email).append("\n");
+    sb.append("  age: ").append(age).append("\n");
+    sb.append("}\n");
+    return sb.toString();
+  }
+}
